// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: AvatarNameListMsg matches snapshot 1`] = `
.emotion-0 {
  color: #4092CD;
  word-break: break-all;
}

.emotion-0:hover {
  cursor: pointer;
}

<a
  className="emotion-0"
  href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94nz"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onTouchStart={[Function]}
>
  name
</a>
`;

exports[`components: AvatarNameListMsg matches snapshot with empty values 1`] = `null`;

exports[`components: AvatarNameListMsg matches snapshot with multiple values 1`] = `
[
  .emotion-0 {
  color: #4092CD;
  word-break: break-all;
}

.emotion-0:hover {
  cursor: pointer;
}

<a
    className="emotion-0"
    href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94nz"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    name-1
  </a>,
  " ",
  "and",
  " ",
  .emotion-0 {
  color: #4092CD;
  word-break: break-all;
}

.emotion-0:hover {
  cursor: pointer;
}

<a
    className="emotion-0"
    href="/accounts/desmos1jrld5g998gqm4yx26l6cvhxz7y5adgxquy94xx"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    name-2
  </a>,
]
`;
